err/yandex-ci-parser.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yandex_ci_parser'...
Compiling './lib/python3.5/site-packages/yandex_ci_parser/bar.py'...
***   File "./lib/python3.5/site-packages/yandex_ci_parser/bar.py", line 25
    'domain': ur'domain="(.*?)"',
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yandex_ci_parser/image.py'...
***   File "./lib/python3.5/site-packages/yandex_ci_parser/image.py", line 34
    8: ur'..BBBBB..BBBBBB..BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB....BB.....BBBBBBBBBBBBBBBBBB.BBBBBBBBBBBBBBB...BBB...BBBBBB.',
                                                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yandex_ci_parser/yaca.py'...
***   File "./lib/python3.5/site-packages/yandex_ci_parser/yaca.py", line 19
    ur'<a href="[^"]*{domain}[^"]*" target="_blank">[^<]*</a><div>[^<]*</div>\s*</td>\s*<td>(\d+)<\/td>'.format(
                                                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yandex_ci_parser-0.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
